--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@ body {
 
 canvas {
     display: block;
-    position:absolute;
+    position:relativec;
 
 }
 .slidercontainer {
+display: flex;
+flex-direction: column;
+justify-items: center;
+/* align-items: center; */
  width:100%;
  position:absolute;
  z-index: 2;
@@ -21,7 +25,19 @@ canvas {
     transition: opacity .2s
 
 }
+.btn{
+    width: 10%;
+    outline:none;
+    border:none;
+    margin-bottom: 2px;
+    padding: 2px 1px 1px 2px;
+    background-color: rgba(250, 250, 250, 0.3);
+    border-radius: 20px;
+    color:white;
+    opacity: 1;
+}
 
 .slider:hover{
     opacity:1;
 }
+
