--- a/style.css
+++ b/style.css
@@ -19,23 +19,26 @@ justify-items: center;
 .slider {
     --webkit-appearance:none;
     /* appearance: none; */
+    overflow: hidden;
     width: 10%;
     outline: none;
     opacity: 0.7;
-    transition: opacity .2s
-
+    transition: opacity .2s;
+    background-color: red;
 }
 .btn{
     width: 10%;
     outline:none;
     border:none;
     margin-bottom: 2px;
-    padding: 2px 1px 1px 2px;
-    background-color: rgba(250, 250, 250, 0.3);
+    /* padding: 2px 1px 1px 2px; */
+    background-color: rgba(150, 150, 150, 0.2);
     border-radius: 20px;
     color:white;
+    font-size: 1.1rem;
     opacity: 1;
 }
+
 
 .slider:hover{
     opacity:1;
